# multimedia_image_effect

./: BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  config.gni  hisysevent.yaml
frameworks/native/: BUILD.gn  native_base.h  native_common_utils.cpp  native_common_utils.h  native_efilter.cpp  native_image_effect.cpp
frameworks/native/capi/: image_effect.cpp  image_effect_filter.cpp  native_common_utils.cpp  native_common_utils.h  native_effect_base.h  native_effect_filter.cpp  native_image_effect.cpp
frameworks/native/common_effect/common/: common_utils.cpp  common_utils.h  external_loader.cpp  external_loader.h  format_helper.cpp  json_helper.h  memcpy_helper.cpp  string_helper.cpp  string_helper.h
frameworks/native/common_effect/effect/src/: effect.cpp  image_effect.cpp
frameworks/native/common_effect/engine/gpu_render/: IMRenderContext.cpp  IMRenderContext.h  IMRenderSurface.h
frameworks/native/common_effect/engine/utils/: GLUtils.h
frameworks/native/common_effect/memory/include/: memory_manager.h
frameworks/native/common_effect/memory/src/: memory_manager.cpp
frameworks/native/common_effect/negotiate/: capability_negotiate.cpp
frameworks/native/common_effect/receiver/: image_effect_receiver.cpp  image_effect_receiver.h
frameworks/native/common_effect/strategy/: effect_render_strategy.cpp
frameworks/native/effect/base/: effect.cpp  effect.h  effect_context.cpp  effect_surface_adapter.cpp  effect_surface_adapter.h  external_loader.cpp  external_loader.h  image_effect.cpp  image_effect_inner.cpp  surface_buffer_manager.cpp  surface_buffer_manager.h
frameworks/native/effect/common/: common_utils.cpp  error_code.cpp  external_loader.h  json_helper.cpp
frameworks/native/effect/factory/: efilter_factory.cpp
frameworks/native/effect/gpu_engine/gpu_render/: IMRenderAttribute.cpp  IMRenderAttribute.h  IMRenderSurface.cpp  RenderComponent.h
frameworks/native/effect/gpu_engine/utils/: GLUtils.cpp
frameworks/native/effect/manager/colorspace_manager/: colorspace_converter.cpp  colorspace_helper.cpp  colorspace_manager.cpp  colorspace_processor.cpp  colorspace_strategy.cpp  colorspace_strategy.h  metadata_generator.cpp  metadata_processor.cpp
frameworks/native/effect/manager/memory_manager/: effect_memory.cpp  effect_memory_manager.cpp
frameworks/native/effect/memory/: effect_memory.cpp  effect_memory_manager.cpp
frameworks/native/effect/pipeline/core/: capability_negotiate.cpp  filter_base.cpp  pipeline_core.cpp  port.cpp
frameworks/native/effect/pipeline/factory/: filter_factory.cpp
frameworks/native/effect/render_environment/gpu_render/: IMRenderAttribute.cpp  IMRenderAttribute.h  IMRenderContext.cpp  IMRenderContext.h  IMRenderSurface.cpp  IMRenderSurface.h  RenderComponent.h
frameworks/native/effect/render_environment/utils/: GLUtils.cpp  GLUtils.h
frameworks/native/effect/strategy/: effect_render_strategy.h
frameworks/native/effect/surface_adapter/: effect_surface_adapter.cpp  effect_surface_adapter.h
frameworks/native/efilter/base/: efilter.cpp  efilter_base.cpp  efilter_base.h  efilter_cache_config.h  efilter_factory.cpp  efilter_render_strategy.cpp  efilter_render_strategy.h  render_strategy.cpp  render_strategy.h
frameworks/native/efilter/custom/: custom_efilter.cpp  custom_efilter.h  filter_delegate.cpp
frameworks/native/efilter/filterimpl/brightness/: brightness_efilter.cpp  brightness_efilter.h  cpu_brightness_algo.cpp  cpu_brightness_algo.h  (+2 more)
frameworks/native/filter_operator/base/: filter_operator.h  filter_operator_factory.cpp  filter_operator_factory.h
frameworks/native/filter_operator/common/: filter_operator_utils.h
frameworks/native/pipeline/core/: filter_base.cpp  pipeline_core.cpp  port.cpp
frameworks/native/pipeline/factory/: filter_factory.cpp
frameworks/native/render_environment/: render_environment.cpp  render_environment.h
frameworks/native/render_environment/base/: im_base_type.h  image_base.h  render_base.h
frameworks/native/render_environment/core/: algorithm_program.cpp  algorithm_program.h  render_default_data.h  render_mesh.cpp  render_mesh.h  render_opengl_renderer.cpp  render_opengl_renderer.h  render_resource_cache.h  render_viewport.h
frameworks/native/render_environment/graphic/: gl_utils.cpp  gl_utils.h  render_attribute.cpp  render_attribute.h  render_context.cpp  render_context.h  render_frame_buffer.cpp  render_frame_buffer.h  render_general_program.cpp  render_general_program.h  render_lib_header.h  render_object.h  render_program.cpp  render_program.h  render_surface.cpp  render_surface.h  render_texture.h
frameworks/native/utils/: effect_log.h  effect_trace.h
frameworks/native/utils/common/: any.cpp  common_utils.cpp  common_utils.h  effect_json_helper.cpp  image_effect_marco_define.h  json_helper.cpp  json_helper.h  memcpy_helper.cpp  string_helper.cpp  string_helper.h  vpe_helper.cpp  vpe_helper.h
frameworks/native/utils/dfx/: effect_log.h  effect_trace.h  error_code.cpp  event_report.cpp  event_report.h
frameworks/native/utils/format/: format_helper.cpp
test/: BUILD.gn
test/unittest/: BUILD.gn  TestCpuContrastAlgo.cpp  TestEffectColorSpaceManager.cpp  TestEffectMemoryManager.cpp  TestEffectPipeline.cpp  TestImageEffect.cpp  TestImageSinkFilter.cpp  TestJsonHelper.cpp  TestPort.cpp  TestRenderEnvironment.cpp  TestUtils.cpp  image_effect_capi_unittest.cpp  image_effect_capi_unittest.h  image_effect_inner_unittest.cpp  image_effect_inner_unittest.h  native_image_effect_unittest.cpp
test/unittest/common/: test_common.h
test/unittest/mock/include/: mock_native_pixel_map.h  mock_picture.h  mock_pixel_map.h  mock_pixel_map_napi.h  mock_producer_surface.h  mock_surface_buffer.h  mock_surface_buffer_yuv_nv12.h  mock_surface_buffer_yuv_nv21.h
test/unittest/mock/src/: mock_picture.cpp  mock_pixel_map.cpp  mock_pixel_map_napi.cpp  mock_producer_surface.cpp
test/unittest/utils/: test_effect_log.h  test_native_buffer_utils.cpp  test_native_buffer_utils.h  test_picture_utils.cpp  test_picture_utils.h  test_pixel_map_utils.cpp  test_pixel_map_utils.h
(+153 files in other folders)
