# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#

import("//build/ohos.gni")

group("image_effect") {
    deps = [
        "frameworks/native:image_effect",
        "frameworks/native:image_effect_ndk"
    ]
}